Fix the flex wrapping

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -65,4 +65,8 @@ abbr {
   .flexGrid {
     grid-template-columns: none;
   }
+
+  .responsiveWrap {
+    flex-wrap: wrap;
+  }
 }
